# budget_cursor

./: .gitignore  PRD.md  README.md  docker-compose.yml
backend/: Dockerfile  README_TESTING.md  categories.json  pyproject.toml
backend/app/: __init__.py  csv_validator.py  fx_rates.py  langfuse_tracer.py  main.py  models.py  utils.py
backend/mappings/: mappings.json
backend/tests/: __init__.py  conftest.py  test_csv_validator.py  test_fx_rates.py  test_main.py  test_utils.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.css
progress/: .gitkeep
test_output/: .gitkeep  README.md
test_output/categories/: .gitkeep
test_output/mappings/: .gitkeep
test_output/progress/: .gitkeep
